# dpvis

./: .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .style.yapf  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  Makefile  README.md  fib.py  fibonacci.py  mkdocs.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-demos.yml  docs.yml  preview-deploy.yml  pylint.yml  testing.yml
demos/: 2d_tester.py  edit_distance.py  edit_distance_1d.py  edit_distance_2d.py  excavation.py  fib_demo.py  fibonacci+1.py  fibonacci.py  knapsack.py  matrix_traversal.py  max_index_only_tester.py  oldknapsack.py  sequence_alignment.py  strange_pointers.py  strange_printer.py  weighted_interval.py  wis.py
docs/: dp_array.md  gen_ref_pages.py  getting_started.md
docs/api/: logger.md  visualizer.md
docs/examples/: edit_distance.md  excavation.md  fibonacci.md  index.md  knapsack.md  matrix_traversal.md  strange_printers.md  test.ipynb  wis.ipynb  wis.md  wis2.md
docs/live_demos/: knapsack.md  strange_pointers.md  wis.md
docs/scripts/: gen_demo_pages.py  gen_ref_pages.py
docs/stylesheets/: extra.css
docs/test_mode/: test_mode.md
dp/: __init__.py  _callbacks.py  _dp_array.py  _index_converter.py  _key_listener.js  _logger.py  _verify.py  _visualizer.py
dp/assets/: table.css
tests/: README.md  dp_array_logger_int_test.py  dp_array_logger_test.py  dp_array_test.py  fib_test.py  index_converter.py  index_converter_test.py  logger_test.py  verify_test.py
tutorials/: fibonacci.ipynb
