[tool.poetry]
name = "dpvis"
version = "0.1.0"
description = "" # TODO
license = "MIT"
authors = ["itsdawei <dhlee@usc.edu>"] # TODO Add authors
readme = "README.md"
repository = "https://github.com/itsdawei/dpvis"
packages = [
    { include = "dp" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26"
plotly = "^5.17.0"
dash = "^2.14.0"
fire = "^0.5.0"
colorama = "^0.4.6"
dash-bootstrap-components = "^1.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
yapf = "^0.40.1"
pytest = "^7.4.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
mkdocstrings = { version = "^0.26.2",  extras = ["python"] }
mkdocs-gen-files = "^0.5.0"
mkdocs-autorefs = "^1.2.0"
mkdocs-jupyter = "^0.25.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
